# snap

./: .gitignore  CMakeLists.txt  README.md  build.sh  file.txt  main.cpp  run.sh  test_sdk.cpp
include/: safe_queue.h  thread_pool.h  xtkj_capture.h
include/utils/: data_type.h  ffmpeg_decoder.h  mpp_decoder.h  pullFramer.h
jni/: cn_xtkj_jni_capture_RtspCapture.cpp  cn_xtkj_jni_capture_RtspCapture.h
src/: thread_pool.cpp  xtkj_capture.cpp  xtkj_decoder copy.cpp  xtkj_decoder_soft  xtkj_decoderbk  xtkj_decoderbk4
src/utils/: ffmpeg_decoder.cpp  mpp_decoder.cpp  pullFramer.cpp
